# byte

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc  404.html  CHANGELOG.md  PROJECT_ARCHITECTURE.md  README.md  cliff.toml  flake.nix  index.html  justfile  mkdocs.yml  package.nix  prettier.config.cjs  pyproject.toml  pytest.ini  schema.json  sitemap.xml
.byte/: .gitignore  config.jsonc  config.yaml  constitution.json  memory.db
.byte/constitution/: constitution.md
.byte/constitution/governance/: amendment-procedure.md  compliance-review.md  supremacy.md  versioning-policy.md
.byte/constitution/principles/: domain-driven-design.md  don-t-repeat-yourself-dry.md  i-example-principle.md  i-human-in-the-loop-supremacy.md  ii-service-provider-architecture.md  iii-domain-isolation.md  iv-convention-driven-agent-behavior.md  minimal-lean-docstrings.md  strict-typing.md  v-strict-python-standards.md  vi-don-t-repeat-yourself-dry.md  vi-test-backed-confidence.md  vii-don-t-repeat-yourself-dry.md
.byte/conventions/: ARCHITECTURE.md  CODE_PATTERNS.md  CODE_STYLEGUIDE.md  COMMENT_STANDARDS.md  COMMENT_STYLEGUIDE.md  DOCUMENTATION_STANDARDS.md  DOMAIN_DOCUMENTATION_GIT.md  DOMAIN_DOCUMENTATION_KNOWLEDGE.md  DOMAIN_DOCUMENTATION_PARSING.md  LANGUAGE_STYLE_GUIDE.md  MKDOCS_STYLEGUIDE.md  PROJECT_ARCHITECTURE.md  PROJECT_TOOLING.md  PYTHON_STYLEGUIDE.md  byte-config-domain.md  comment-standards.md  files-domain-documentation.md  git-domain-documentation.md  lint-domain-documentation.md  project-architecture.md  tooling-convention.md
.byte/skills/create-agent/: SKILL.md
.byte/skills/create-tool/: SKILL.md
.byte/skills/documentation-tone/: SKILL.md
.byte/skills/domain-architecture/: SKILL.md
.byte/skills/foundation-domain/: SKILL.md
.byte/skills/gateway-domain/: SKILL.md
.byte/specs/: 2026-05-20-refactor-domain-spec.md
.byte/specs/gateway/: SPEC.md
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  prepare-release.yml  publish-to-pypi.yml  release-pypi.yml  release.yml
assets/: _boot.tape  _config.tape  command_commit.tape  command_convention.tape  command_file.tape  command_preset_load.tape  command_web.tape  example_coder.tape
byte/: bootstrap.py  container.py  context.py  main.py
byte/cli/: __init__.py
byte/commands/: __init__.py  exit.py  help.py  processor.py  registry.py
byte/config/: settings.py
byte/context/: __init__.py
byte/core/: event_bus.py  logging.py  service_provider.py  task_manager.py  utils.py
byte/core/actors/: __init__.py  app.py  base.py  message.py  streams.py
byte/core/command/: processor.py  registry.py
byte/core/config/: __init__.py  config.py  configurable.py  mixins.py  schema.py  service.py  service_provider.py
byte/core/events/: __init__.py  dispatcher.py  event.py  eventable.py  mixins.py  service_provider.py
byte/core/response/: types.py  (+4 more)
byte/providers/: service_provider.py
byte/repositories/: file_repository.py
byte/ui/: prompt.py
byte/utils/: helpers.py
bytesmith/: main.py  prompt.py
bytesmith/cli/: __init__.py
bytesmith/commands/: __init__.py  exit.py  files.py  help.py  processor.py  registry.py
bytesmith/config/: settings.py
bytesmith/context/: file_manager.py
bytesmith/ui/: prompt.py
bytesmith/utils/: logging.py
concepts/: index.html
concepts/commit/: index.html
concepts/conventions/: index.html
concepts/file-context/: index.html
concepts/file-watching/: index.html
concepts/lint/: index.html
concepts/lsp/: index.html
concepts/memory/: index.html
concepts/presets/: index.html
concepts/web/: index.html
docs/: commands.md  index.md  installation.md  quickstart.md  settings.md
docs/concepts/: commit.md  conventions.md  file-context.md  file-watching.md  index.md  lint.md  lsp.md  memory.md  presets.md  web.md
docs/explanation/: architecture-overview.md  available-commands.md  configuration.md  gateway-requests.md  the-commands.md  the-constitution.md  the-gateway.md
docs/files/: commands.md  file-watching.md  index.md
docs/getting-started/: example-flow.md  first-steps.md  index.md  installation.md  workflow-example.md
docs/how-to-guides/: adding-files.md  configure-providers-models.md  configuring-linting.md  creating-and-managing-skills.md  creating-and-managing-specs.md  managing-file-context.md  managing-the-constitution.md  managing-web-context.md  reviewing-conversations.md  using-git-commits.md
docs/reference/: commands.md  settings.md
docs/references/: commands.md  configuration.md  gateway-requests.md
explanation/architecture-overview/: index.html
explanation/configuration/: index.html
explanation/the-commands/: index.html
explanation/the-constitution/: index.html
explanation/the-gateway/: index.html
getting-started/: index.html
getting-started/first-steps/: index.html
getting-started/installation/: index.html
getting-started/workflow-example/: index.html
how-to-guides/adding-files/: index.html
how-to-guides/configure-providers-models/: index.html
how-to-guides/configuring-linting/: index.html
how-to-guides/creating-and-managing-skills/: index.html
how-to-guides/creating-and-managing-specs/: index.html
how-to-guides/managing-file-context/: index.html
how-to-guides/managing-the-constitution/: index.html
how-to-guides/managing-web-context/: index.html
how-to-guides/reviewing-conversations/: index.html
how-to-guides/using-git-commits/: index.html
node/: package.json  tsconfig.json
node/src/: index.ts  main.ts
reference/: index.html
reference/commands/: index.html
reference/settings/: index.html
references/commands/: index.html
references/configuration/: index.html
references/gateway-requests/: index.html
search/: search_index.json
settings/: index.html
src/byte/: __init__.py  _import_utils.py  bootstrap.py  container.py  context.py  main.py  version.py
src/scripts/: commands_to_md.py  generate_tui_styles.py  release.py  requests_to_md.py  settings_to_md.py  tui.tcss  update_models.py
src/tests/: base_test.py  conftest.py  container_factory.py  utils.py
(+1265 files in other folders)
