[project]
name = "byte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "gitpython>=3.1.45",
    "langchain[anthropic,google-genai,openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
]

scripts.byte = "byte.cli:cli"

[dependency-groups]
dev = ["ruff>=0.12.12"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "LOG",
    "UP",
    "T10",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "FURB",
    "RUF",
]
ignore = [
    "E712",
    "E501",
    "UP006",
    "UP007",
    "UP035",
    "UP045",
    "PIE790",
    "RUF005",
    "RUF006",
    "RUF012",
    "ISC001",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.basedpyright]
include = ["byte"]
pythonPlatform = "All"
pythonVersion = "3.12"
reportIgnoreCommentWithoutRule = true
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "basic"

[[tool.basedpyright.executionEnvironments]]
root = "examples"
reportUnknownArgumentType = "hint"
reportUnknownMemberType = "hint"
reportUnknownVariableType = "hint"
reportMissingImports = "hint"
reportMissingTypeStubs = "hint"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
