[project]
name = "byte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.14.2",
    "click>=8.2.1",
    "gitpython>=3.1.45",
    "langchain-mcp-adapters>=0.1.10",
    "langchain[anthropic,google-genai,openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "markdownify>=1.2.0",
    "pathspec>=0.12.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydoll-python>=2.8.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "watchfiles>=1.1.0",
]

scripts.byte = "byte.core.cli:cli"

[dependency-groups]
dev = ["grandalf>=0.8", "pytest>=8.4.2", "ruff>=0.12.12", "tomli>=2.2.1"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "LOG",
    "UP",
    "T10",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "FURB",
    "RUF",
]
ignore = [
    "E712",
    "E501",
    "UP006",
    "UP007",
    "UP035",
    "UP045",
    "PIE790",
    "RUF005",
    "RUF006",
    "RUF012",
    "ISC001",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.basedpyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonPlatform = "All"
pythonVersion = "3.12"
reportIgnoreCommentWithoutRule = true
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "basic"

executionEnvironments = [
    { root = "src/tests", reportPrivateUsage = false, extraPaths = [
        "src/tests/e2e",
    ] },
    { root = "src" },
]

# [[tool.basedpyright.executionEnvironments]]
# root = "src"
# reportUnknownArgumentType = "hint"
# reportUnknownMemberType = "hint"
# reportUnknownVariableType = "hint"
# reportMissingImports = "hint"
# reportMissingTypeStubs = "hint"


[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
